--- a/parallel/Makefile
+++ b/parallel/Makefile
@@ -6,10 +6,10 @@ TARGET	= nbody_brute_force nbody_barnes_hut
 OBJS	= ui.o xstuff.o nbody_tools.o nbody_alloc.o
 
 DISPLAY = -DDISPLAY
-#DISPLAY =
+DISPLAY =
 
-#DUMP = -DDUMP_RESULT
-DUMP =
+DUMP = -DDUMP_RESULT
+#DUMP =
 
 all: $(TARGET)
 
@@ -20,6 +20,6 @@ nbody_barnes_hut: nbody_barnes_hut.o $(OBJS)
 	$(CC) $(VERBOSE) -o $@ $< $(OBJS)  $(LDFLAGS)
 
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< $(VERBOSE) $(DISPLAY) $(DUMP)
+	$(CC) $(CFLAGS) -c $< $(VERBOSE) $(DISPLAY) $(DUMP) -fopenmp
 clean:
 	rm -f *.o $(TARGET)
