--- a/parallel/Makefile
+++ b/parallel/Makefile
@@ -1,8 +1,8 @@
-CC	= gcc
+CC	= mpicc
 CFLAGS	= -O0 -g -Wall
 LDFLAGS = -lm -lpthread -lX11 -fopenmp
 VERBOSE	=
-TARGET	= nbody_brute_force nbody_barnes_hut
+TARGET	= nbody_brute_force nbody_barnes_hut sequential_nbody_barnes_hut sequential_nbody_brute_force 
 OBJS	= ui.o xstuff.o nbody_tools.o nbody_alloc.o
 
 DISPLAY = -DDISPLAY
@@ -13,11 +13,17 @@ DUMP = -DDUMP_RESULT
 
 all: $(TARGET)
 
+sequential_nbody_brute_force: sequential_nbody_barnes_hut.o $(OBJS)
+	$(CC) $(VERBOSE) -o $@ $< $(OBJS) $(LDFLAGS)
+
+sequential_nbody_barnes_hut: sequential_nbody_barnes_hut.o $(OBJS)
+	$(CC) $(VERBOSE) -o $@ $< $(OBJS) $(LDFLAGS)
+
 nbody_brute_force: nbody_brute_force.o $(OBJS)
 	$(CC) $(VERBOSE) -o $@ $< $(OBJS) $(LDFLAGS)
 
 nbody_barnes_hut: nbody_barnes_hut.o $(OBJS)
-	$(CC) $(VERBOSE) -o $@ $< $(OBJS)  $(LDFLAGS)
+	$(CC) $(VERBOSE) -o $@ $< $(OBJS) $(LDFLAGS)
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< $(VERBOSE) $(DISPLAY) $(DUMP) -fopenmp
